[workspace]
members = ["ff_derive"]

[workspace.package]
edition = "2024"
rust-version = "1.93.0"

[workspace.dependencies]
# Internal
ff_derive = { version = "0.14.0-rc.0", package = "rustcrypto-ff_derive", path = "ff_derive" }

# External
addchain = { version = "0.2", git = "https://github.com/earthlings-dev/addchain.git" }
bitvec = { version = "1", default-features = false }
blake2b_simd = "1"
byteorder = { version = "1", default-features = false }
getrandom = { version = "0.4", git = "https://github.com/earthlings-dev/getrandom.git" }
num-bigint = { version = "0.4", git = "https://github.com/earthlings-dev/num-bigint.git" }
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1"
quote = "1"
rand = { version = "0.10", git = "https://github.com/earthlings-dev/rand.git" }
rand_core = { version = "0.10", default-features = false, git = "https://github.com/earthlings-dev/rand_core.git" }
subtle = { version = "2.6.1", default-features = false, features = ["i128"] }
syn = { version = "2", features = ["full"] }

[patch.crates-io]
getrandom = { git = "https://github.com/earthlings-dev/getrandom.git" }
rand = { git = "https://github.com/earthlings-dev/rand.git" }
rand_core = { git = "https://github.com/earthlings-dev/rand_core.git" }

[package]
name = "rustcrypto-ff"
version = "0.14.0-rc.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = "https://docs.rs/rustcrypto-ff/"
homepage = "https://github.com/RustCrypto/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/RustCrypto/ff"

[dependencies]
bitvec = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
ff_derive = { workspace = true, optional = true }
rand_core = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
blake2b_simd = { workspace = true }
rand = { workspace = true }

[features]
default = ["bits", "std"]
alloc = []
bits = ["bitvec", "ff_derive?/bits"]
derive = ["byteorder", "ff_derive"]
std = ["alloc"]

[[test]]
name = "derive"
required-features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
