[package]
name = "rustcrypto-ff_derive"
version = "0.14.0-rc.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/ff-derive/"
homepage = "https://github.com/zkcrypto/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/zkcrypto/ff"

[features]
# enabled when generating bitvec code utilizing the version of ff's bitvec
# ff/bits enables this
bits = []

[lib]
proc-macro = true

[dependencies]
addchain = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[badges]
maintenance = { status = "passively-maintained" }
